- Make styling changes to mainPageContentContainer - Refactor underConstruction page to use mainPageContentContainer - Make alignment fix on header title - Make minor fixes in commented code

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  border: 1px solid red
 } */
 
 /* html {
